--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,8 +16,15 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.first_name %> <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <% if current_user.avatar.present? %>
+                <%= image_tag current_user.avatar.url, class: 'avatar' %> <span class="caret"></span>
+              <% else %>
+                <%= current_user.first_name %> <span class="caret"></span>
+              <% end %>
+            </a>
             <ul class="dropdown-menu">
+              <li><%= link_to 'My profile', edit_user_registration_path(current_user) %></li>
               <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
