--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,8 +24,12 @@
               <% end %>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to 'My profile', edit_user_registration_path(current_user) %></li>
-              <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+              <li>
+                <%= link_to t('general.links.my_profile'), edit_user_registration_path(current_user) %>
+              </li>
+              <li>
+                <%= link_to t('general.links.sign_out'), destroy_user_session_path, method: :delete %>
+              </li>
             </ul>
           </li>
         </ul>
