--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
                 <%= link_to t('general.links.my_profile'), edit_user_registration_path(current_user) %>
               </li>
               <li>
-                <%= link_to t('general.links.sign_out'), destroy_user_session_path, method: :delete %>
+                <%= link_to t('devise.sign_out'), destroy_user_session_path, method: :delete %>
               </li>
             </ul>
           </li>
