--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,14 +39,12 @@
       </div>
 
       <div>
-        <%= f.submit "Update", class: 'btn btn-primary' %>
+        <%= f.submit t('devise.update'), class: 'btn btn-primary' %>
       </div>
     <% end %>
 
-    <h3>Cancel my account</h3>
+    <%= button_to t('devise.cancel_account'), registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %>
 
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-default' %></p>
-
-    <%= link_to "Back", :back, class: 'btn btn-default' %>
+    <%= link_to t('general.links.back'), :back, class: 'btn btn-default' %>
   </div>
 </div>
