--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -39,7 +39,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: 'btn btn-default' %>
+        <%= f.submit t('general.links.sign_up'), class: 'btn btn-default' %>
       </div>
     <% end %>
 
