--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+        <div class="links">
+          <%= link_to t('home.index'), root_path, class: 'navbar-brand' %>
+          <%= link_to t('customers.index'), customers_path, class: 'navbar-brand' %>
+        </div>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
